@@ -2,6 +2,5 @@ Things to be implemented/fixed next:
 
 - track merge
 - check liblocation coordinate change (save energy)
-- prevent multiple instances of same icon
 - investigate http://pagesperso-orange.fr/universimmedia/geo/loc.htm
-- make gps.c cope with altitude (for tracking) and sats (for gpxview)
+- make gps.c cope with sats (for gpxview)
